--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Coming soon</title>
 </head>
 <body>
-
+	<img src="https://picsum.photos/seed/picsum/200/300">
 </body>
 </html>
